# Radiation

Composition Estimation proj/Geant4 Simulation/: CMakeLists.txt  RunCmd.txt  output0.root  sim.cc
Composition Estimation proj/Geant4 Simulation/include/: PMDetectorConstruction.hh
Composition Estimation proj/Geant4 Simulation/macros/: run.mac  vis.mac
Composition Estimation proj/Geant4 Simulation/src/: PMDetectorConstruction.cc  PMPrimaryGenerator.cc  PMRunAction.cc  PMSensitiveDetector.cc
Composition Estimation proj/Python Algorithm/: Composition Algorithm.ipynb
Composition Estimation proj/Python Algorithm/Empirical Coefficients/: Calcite.txt  Cellulose.txt  Hematite.txt  Quartz.txt  Water.txt
